--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
     </dependency>
 
     <dependency>
+      <groupId>net.authorize</groupId>
+      <artifactId>anet-java-sdk</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.2</version>
