--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
     </dependency>
 
     <dependency>
+      <groupId>paypal.payflow</groupId>
+      <artifactId>payflow-sdk</artifactId>
+      <version>4.31</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.2</version>
