--- a/payments4j-payflowpro/pom.xml
+++ b/payments4j-payflowpro/pom.xml
@@ -3,31 +3,33 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <artifactId>payments4j</artifactId>
     <groupId>org.payments4j</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${project.version}</version>
   </parent>
 
   <groupId>org.payments4j</groupId>
-  <artifactId>payments4j-api</artifactId>
+  <artifactId>payments4j-payflowpro</artifactId>
   <version>1.0-SNAPSHOT</version>
-
-  <name>payments4j-api</name>
 
   <dependencies>
     <dependency>
-      <groupId>commons-beanutils</groupId>
-      <artifactId>commons-beanutils-core</artifactId>
-      <version>1.8.3</version>
+      <groupId>org.payments4j</groupId>
+      <artifactId>payments4j-api</artifactId>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.5</version>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.1</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>r07</version>
     </dependency>
   </dependencies>
 </project>
