--- a/payments4j-api/pom.xml
+++ b/payments4j-api/pom.xml
@@ -29,5 +29,18 @@
       <version>2.5</version>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.2</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.easytesting</groupId>
+      <artifactId>fest-assert</artifactId>
+      <version>1.3</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
