--- a/payments4j-payflowpro/pom.xml
+++ b/payments4j-payflowpro/pom.xml
@@ -6,18 +6,20 @@
   <parent>
     <artifactId>payments4j</artifactId>
     <groupId>org.payments4j</groupId>
-    <version>${project.version}</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <groupId>org.payments4j</groupId>
   <artifactId>payments4j-payflowpro</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <name>payments4j-payflowpro</name>
+
   <dependencies>
     <dependency>
       <groupId>org.payments4j</groupId>
       <artifactId>payments4j-api</artifactId>
-      <version>${project.version}</version>
+      <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -25,11 +27,6 @@
       <artifactId>httpclient</artifactId>
       <version>4.1</version>
       <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>r07</version>
     </dependency>
   </dependencies>
 </project>
